@@ -1,20 +1,29 @@
 package com.bjcareer.search.out.api.python;
 
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
+import com.bjcareer.search.application.port.out.LoadNewsPort;
+import com.bjcareer.search.application.port.out.NewsCommand;
 import com.bjcareer.search.application.port.out.QueryStockServerPort;
+import com.bjcareer.search.domain.News;
 import com.bjcareer.search.domain.entity.Market;
 import com.bjcareer.search.domain.entity.OHLC;
 import com.bjcareer.search.domain.entity.Stock;
 import com.bjcareer.search.domain.entity.StockChart;
+import com.bjcareer.search.out.api.dto.NewsResponseDTO;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,80 +31,104 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 @RequiredArgsConstructor
 @Component
-public class PythonSearchServerAdapter implements QueryStockServerPort {
+public class PythonSearchServerAdapter implements QueryStockServerPort, LoadNewsPort {
+
 	@Value("${python-search.address}")
 	private String address;
 
 	private final RestTemplate restTemplate;
 
 	public ParseNewsContentResponseDTO getNewsBody(String link) {
-		log.debug("바디를 요청한 뉴스 링크는? : {}", link);
-		String url = address + PythonServerURI.PARSE_CONTENT + link;
+		String encodedLink = URLEncoder.encode(link, StandardCharsets.UTF_8);
+		String url = address + PythonServerURI.PARSE_CONTENT + encodedLink;
+		log.debug("Requesting news body for link: {}", url);
 
-		ResponseEntity<ParseNewsContentResponseDTO> exchange = restTemplate.exchange(url, HttpMethod.GET, null,
-			ParseNewsContentResponseDTO.class);
+		Optional<ParseNewsContentResponseDTO> responseDTO = fetchFromServer(url, HttpMethod.GET,
+			new ParameterizedTypeReference<>() {
+			});
+		return responseDTO.orElseGet(ParseNewsContentResponseDTO::new);
 
-		HttpStatusCode statusCode = exchange.getStatusCode();
-
-		if (!statusCode.is2xxSuccessful()) {
-			log.error("Failed to get news body from python server. Status code: {}", statusCode);
-			return null;
-		}
-
-		ParseNewsContentResponseDTO body = exchange.getBody();
-		return body;
 	}
 
 	@Override
 	public StockChart loadStockChart(StockChartQueryConfig config) {
 		String url = config.buildUrl(address + PythonServerURI.OHLC);
 
-		ResponseEntity<List<OhlcResponseDTO>> exchange = restTemplate.exchange(url, HttpMethod.GET, null,
-			new ParameterizedTypeReference<List<OhlcResponseDTO>>() {});
-
-		HttpStatusCode statusCode = exchange.getStatusCode();
-
-		if (!statusCode.is2xxSuccessful()) {
-			log.error("Failed to get news body from python server. Status code: {}", statusCode);
-			return null;
-		}
-
-		List<OhlcResponseDTO> res = exchange.getBody();
-
-		List<OHLC> ohlcs = res.stream().map(body -> {
-			return new OHLC(body.getOpen(), body.getHigh(), body.getLow(), body.getClose(), body.getDate());
-		}).toList();
-
-		return new StockChart(config.getStock(), ohlcs);
+		return fetchFromServer(url, HttpMethod.GET, new ParameterizedTypeReference<List<OhlcResponseDTO>>() {
+		})
+			.map(response -> response.stream()
+				.map(dto -> new OHLC(dto.getOpen(), dto.getHigh(), dto.getLow(), dto.getClose(), dto.getDate()))
+				.collect(Collectors.toList()))
+			.map(ohlcs -> new StockChart(config.getStock(), ohlcs)).get();
 	}
 
 	@Override
 	public List<Stock> loadStockInfo(Market market) {
-		String href = "https://finance.naver.com/item/main.naver?code=";
 		String url = address + PythonServerURI.MARKET + "?q=" + market.name();
+		String hrefTemplate = "https://finance.naver.com/item/main.naver?code=";
 
-		log.info("url: {}", url);
-
-		ResponseEntity<List<MarketResponseDTO>> exchange = restTemplate.exchange(url, HttpMethod.GET, null,
-			new ParameterizedTypeReference<List<MarketResponseDTO>>() {
-			});
-
-		HttpStatusCode statusCode = exchange.getStatusCode();
-
-		if (!statusCode.is2xxSuccessful()) {
-			log.error("Failed to get news body from python server. Status code: {}", statusCode);
-			return null;
-		}
-
-		List<MarketResponseDTO> res = exchange.getBody();
-		return res.stream().map(body -> {
-			return new Stock(body.getSymbol(), body.getName(), Market.fromString(body.getMarket()),
-				href + body.getSymbol(), getIssuedShares(body)
-				, body.getPrice());
-		}).toList();
+		return fetchFromServer(url, HttpMethod.GET, new ParameterizedTypeReference<List<MarketResponseDTO>>() {
+		})
+			.orElse(List.of())
+			.stream()
+			.map(dto -> new Stock(
+				dto.getSymbol(),
+				dto.getName(),
+				Market.fromString(dto.getMarket()),
+				hrefTemplate + dto.getSymbol(),
+				getIssuedShares(dto),
+				dto.getPrice()
+			))
+			.collect(Collectors.toList());
 	}
 
-	private int getIssuedShares(MarketResponseDTO body) {
-		return (int)(body.getCap() / body.getPrice());
+	@Override
+	public List<News> fetchNews(NewsCommand command) {
+		List<News> newsList = new ArrayList<>();
+		String url = command.buildUrl(address + PythonServerURI.NEWS);
+		log.debug("Requesting news for url: {}", url);
+
+		Optional<List<NewsResponseDTO>> newsResponseDTOS = fetchFromServer(url, HttpMethod.GET,
+			new ParameterizedTypeReference<List<NewsResponseDTO>>() {
+			});
+
+		if (newsResponseDTOS.isEmpty()) {
+			log.debug("No news found for command: {}", command);
+			return List.of();
+		}
+
+		List<NewsResponseDTO> newsResponseDTO = newsResponseDTOS.get();
+
+		for (NewsResponseDTO dto : newsResponseDTO) {
+			ParseNewsContentResponseDTO content = getNewsBody(dto.getLink());
+			log.debug("Fetched news body for link: {}", dto.getLink());
+
+			if (content.getPublishDate().isEmpty() || content.getText().isEmpty()) {
+				continue;
+			}
+
+			newsList.add(new News("", dto.getLink(), dto.getLink(), "", content.getPublishDate(), content.getText()));
+		}
+
+		return newsList;
+	}
+
+	private int getIssuedShares(MarketResponseDTO dto) {
+		return (int)(dto.getCap() / dto.getPrice());
+	}
+
+	// 공통 REST 호출 메서드로 재사용성 향상
+	private <T> Optional<T> fetchFromServer(String url, HttpMethod method, ParameterizedTypeReference<T> responseType) {
+		try {
+			ResponseEntity<T> response = restTemplate.exchange(url, method, null, responseType);
+			if (response.getStatusCode().is2xxSuccessful()) {
+				return Optional.ofNullable(response.getBody());
+			} else {
+				log.error("Failed to fetch from server. URL: {}, Status Code: {}", url, response.getStatusCode());
+			}
+		} catch (RestClientException e) {
+			log.error("Exception while fetching data from server. URL: {}, Error: {}", url, e.getMessage());
+		}
+		return Optional.empty();
 	}
 }
